src/test/deca/codegen/invalid/created/objet/invalidCast.deca
// Description:
//    test du cast 3
//
// Resultats:
//
//
// Historique:
//    cree le 20/01/2022


class A{

}
class B extends A {

}
{  
   A a;
   B b = (B) (a);
    
 }
